Fix: 종목 선택 로직 수정